# cafeBERT

./: .env  .env.example  .gitignore  pyproject.toml
src/build_tokenizer/: tokenizer_train.py
src/configs/: __init__.py  app_configs.py
src/data/: download_ds.py
